public/style.css
/* ... */
/* Icon inversion on the button (black icons aren't good on dark backgrounds!) */
.time-scale-dropbtn img {
    filter: invert(100%);
    -webkit-filter: invert(100%);
}

/* Dropdown content (hidden by default) */
.time-scale-dropdown-content {
    display: none;
    position: absolute;
    background-color: #d9a6f5; /* Light purple background */
    border: 1px solid #4B2D77; /* Dark purple border */
    border-radius: 8px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    box-sizing: border-box;
    width: 175px; /* Match the width of the button */
    max-height: 300px; /* Optional: Limit height to prevent overflow */
    overflow-y: auto; /* Add scroll if content exceeds max height */
    z-index: 1000; /* Ensure it appears above other content */
    padding: 5px; /* Add padding to the content */
}

/* Dropdown items */
.time-scale-dropdown-content div {
    color: #41056c;
    padding: 10px;
    text-align: left;
    cursor: pointer;
    display: flex;
    align-items: center;
}

/* Dropdown items on hover */
.time-scale-dropdown-content div:hover {
    background-color: #4B2D77;
    color: white;
}

/* Icon styling */
.time-scale-icon {
    width: 20px;
    height: 20px;
    margin-right: 12px; /* Add margin to create space between icon and text */
}

/* Show dropdown on button click */
.time-scale-selector:hover .time-scale-dropdown-content {
    display: block;
}

/* Arrow styling for dropdown button */
.time-scale-dropbtn::after {
    content: '';
    position: absolute;
    top: 50%;
    right: 10px;
    width: 0;
    height: 0;
}

.footer {
    display: flex;
    flex-flow: wrap;
    justify-content: center;
    position: absolute;
    width: 100%;
    bottom: 5px;
    color: #fff;
    font-size: 14px;
    z-index: -1;
    overflow: hidden;
    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

.footer a {
    margin-left: 5px;
    margin-right: 5px;
}

